--- a/includes/navbar.html
+++ b/includes/navbar.html
@@ -29,16 +29,13 @@
                         <a href="highshape.php">High Shape</a>
                     </li>
                     <li>
-                        <a href="latinfunmoves.php">Latin Fun Moves</a>
-                    </li>
-                    <li>
                         <a href="boksdance.php">Boksdance</a>
                     </li>
                     <li>
-                        <a href="bodydynamics.php">Body Dynamics</a>
+                        <a href="clubjoyyoga.php">ClubJoy Yoga</a>
                     </li>
                     <li>
-                        <a href="clubjoyyoga.php">ClubJoy Yoga</a>
+                        <a href="indoorbootcamp.php">Indoor Bootcamp</a>
                     </li>
                 </ul>
             </li>
