--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="row">
         <div class="col-lg-12">
-            <p>Fit en Fun Aerobics 2007 - 2014 - Made by Mike Faro</p>
+            <p class="footertekst">Fit en Fun Aerobics 2007 - 2015 - Made by Mike Faro</p>
         </div>
     </div>
 </footer>
