Lestijden gewijzigd. Locatie verwijderd. Prijs info aangepast.

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="row">
         <div class="col-lg-12">
-            <p class="footertekst">Fit en Fun 2007 - 2015 - Made by Mike Faro</p>
+            <p class="footertekst">Fit en Fun 2007 - 2016 Made by Mike Faro</p>
         </div>
     </div>
 </footer>
